# peermatch

./: .env  .env.example  Caddyfile.dev  Dockerfile  ENVIRONMENT_VARIABLES.md  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_17_1425-e3fd729579f1_add_skill_and_user_model.py  2025_10_17_1524-d687d095d8fd_add_token_model.py  2025_10_18_1556-659e24c62baf_add_chat_and_message_models.py
backend/src/: main.py
backend/src/api/: __init__.py  auth.py  lifespan.py  security.py  websocket.py
backend/src/api/v1/: chats.py  skills.py  users.py
backend/src/core/: config.py
backend/src/core/di/: container.py
backend/src/core/di/providers/: __init__.py  database.py  embeddings.py  qdrant.py  redis.py  repositories.py  services.py
backend/src/db/: manager.py
backend/src/enums/: skill_type.py
backend/src/exceptions/: auth.py  chat.py  skill.py  user.py
backend/src/models/: __init__.py  chat.py  message.py  skills.py  token.py  user.py
backend/src/repositories/: chat.py  refresh_token.py  skill.py  user.py  vector_search.py
backend/src/schemas/: __init__.py  chat.py  skills.py  token.py  user.py
backend/src/services/: chat.py  security.py  skill.py  token.py  user.py
db/: manager.py
deploy/ansible/: playbook.yml  secrets.example.yml
deploy/ansible/group_vars/: db.yml  web.yml
deploy/ansible/inventory/: hosts.example.ini
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/ai-assistant/: page.jsx  (+1 more)
frontend/components/: app-footer.jsx  app-header.jsx  chat-modal.jsx  chat-window.jsx  chats-list.jsx  error-alert.jsx  expandable-skill-card.jsx  skill-card.jsx  skill-form.jsx
frontend/constants/: validation.js
frontend/hooks/: use-auth.js
frontend/lib/: mock-data.js  validation.js
frontend/services/: api.js  auth.js  call.js  chat.js  skills.js  users.js
src/: main.py
src/core/: config.py
src/enums/: skill_type.py
(+20 files in other folders)
