[project]
name = "PeerMatch"
version = "0.1.0"
description = "PeerMatch is a platform for changing skills and connecting with others."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "dishka>=1.7.2",
    "fastapi>=0.119.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.44",
]
