[project]
name = "PeerMatch"
version = "0.1.0"
description = "PeerMatch is a platform for changing skills and connecting with others."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "dishka>=1.7.2",
    "fastapi>=0.119.0",
    "pydantic[email]>=2.12.2",
    "pydantic-settings>=2.11.0",
    "python-jose>=3.5.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
    "passlib[argon2]>=1.7.4",
    "langchain-gigachat>=0.3.12",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]


[tool.ruff]
target-version = "py311"
exclude = ["venv", ".venv", ".env", "src/typings/external"]

line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    # modules
    "C90", # mccabe complexity
    "DJ",  # django
    "T10", # debugger

    # specific rules
    "COM",    # flake8-commas
    "S104",   # binging to all interfaces
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",   # ignore one-line docstring
    "D203",
    "D212",
    "D213",
    "D400",
    "D415",
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "S101",   # prohibited assert statement
    "ARG001", # unused function argument
    "ANN401", # disallow Any type
    "RUF001", # string contrains ambigious o
    "PLR0913", # too many arguments in function signature
]
format.skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["INP001"]
"src/core/di/providers/*" = ["TC001"]
